// Automatically generated by sol2proto dirty. DO NOT EDIT!
// sources: 
//     NameService.abi
syntax = "proto3";

package name_service;

message Empty {
}

message TransactOpts {
    string from_address = 1;
    string private_key = 2;
    int64 nonce = 3;
    int64 value = 4;
    int64 gas_price = 5;
    int64 gas_limit = 6;
}

message TransactionReq {
    TransactOpts opts = 1;
}

message TransactionResp {
    string tx_hash = 1;
}

message GetNameResp {
    string arg = 1;
}

message OnNameSetReq {
    string name = 1;
}

message SetNameReq {
    string name = 1;
    TransactOpts opts = 2;
}

service NameService {
    rpc getName(Empty) returns (GetNameResp) {}
    rpc setName(SetNameReq) returns (TransactionResp) {}

    // Not supported yet
    // rpc onNameSet(OnNameSetReq) returns (TransactionResp) {}
}
